# whisper-demo

./: README.md  pyproject.toml  requirements.txt  せっけん.json  せっけん.srt  せっけん.tsv  せっけん.txt  せっけん.vtt
